<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <include layout="@layout/header_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/SCAN_LP_TO_BEGIN"
            android:textColor="@color/OrangeAppolis"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtLp"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_holo_light_white"
            android:gravity="center"
            android:hint="@string/LP_NUMBER"
            android:imeOptions="actionSearch"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/GrayAppolis" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingRight="8dp" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/background_button_cancel_gray"
            android:text="@string/text_cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_ok_orange"
            android:text="@string/text_ok"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>