<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background_2x"
    android:orientation="vertical" >
   
     <include layout="@layout/cm_header_bar"/>
     
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingTop="20dp"
         android:paddingBottom="22dp">
         
         <TextView 
             android:id="@+id/tvLocationLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:paddingRight="5dp"
             android:textSize="24sp"
             android:text="@string/cycle_count_current_location"/>
         
          <TextView 
             android:id="@+id/tvLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/Orange"
             android:textStyle="bold"
             android:textSize="24sp"/>
     </LinearLayout>
	
   <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:weightSum="10"
        android:orientation="horizontal" >
	      
        <TextView
            android:id="@+id/tvLoc" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_weight="9"
            android:textColor="@color/Orange6"
            android:text="@string/cycle_adjustment_loc"/>
        
        <EditText 
            android:id="@+id/txtCycleLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="22sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_cycle_holo_light_white"
            android:layout_weight= "5"
            android:textColor="@color/white"/>
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/linCycleItem" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:visibility="gone"
        android:weightSum="10"
        android:orientation="horizontal" >
	      
        <TextView 
            android:id="@+id/tvItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_weight="9"
            android:textColor="@color/Orange6"
            android:text="@string/cycle_adjustment_item"/>
        
        <EditText 
            android:id="@+id/txtCycleItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:hint="@string/cycle_input_item"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_cycle_holo_light_white"
            android:layout_weight= "5"
            android:textColor="@color/white"/>
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:weightSum="2"
        android:gravity="bottom"
        android:paddingBottom="20dp"
        android:orientation="horizontal" >
       
         <LinearLayout
	        android:layout_width="match_parent" 
	        android:layout_height="fill_parent"
	        android:gravity="bottom|left"
	        android:layout_weight="1"
	        android:orientation="horizontal" >
	        
             <Button 
                 android:id="@+id/btnCycleAdjCancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
                 android:textColor="@color/white"
                 android:text="@string/COMMON_CANCEL"
                 android:background="@drawable/background_button_cancel_gray"/>
          
         </LinearLayout>
         
          <LinearLayout
	        android:layout_width="match_parent" 
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="bottom|right"
	        android:orientation="horizontal" >
                
             <Button 
                 android:id="@+id/btnCycleAdjOk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/COMMON_OK"
                 android:enabled="false"
                 android:layout_marginRight="20dp"
                 android:textColor="@color/white"
                 android:paddingLeft="45dp"
                 android:paddingRight="45dp"
                 android:background="@drawable/background_button_ok_orange"/>
         </LinearLayout>
      </LinearLayout>
</LinearLayout>
